fix(vessel): Make sure to use a try-with-connect when using streamQuery() - fix sumaris-pod#30 need by IMAGINE